logs/offboard_pkg/build.make.318.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::FlightLine()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:202:54: error: ‘yaw_d’ was not declared in this scope; did you mean ‘yaw’?
  202 |                 lla = uav[i].get_lla_line(lla_lead0, yaw_d);
      |                                                      ^~~~~
      |                                                      yaw
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: In member function ‘double TaskManager::get_yaw()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:66:5: error: ‘q’ was not declared in this scope
   66 |     q = local_pose.pose.orientation;
      |     ^
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:76: CMakeFiles/offboard_pkg_node.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
